unpackaged/main/default/objects/Request_Tracker__c/fields/Deal__c.field-meta.xml
<CustomField>
    <fullName>Deal__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Deal</label>
    <referenceTo>Pipeline__c</referenceTo>
    <relationshipLabel>Request Tracker</relationshipLabel>
    <relationshipName>Request_Tracker</relationshipName>
    <type>Lookup</type>
</CustomField>